# smart-house-service

./: Cargo.toml  Makefile  Readme.md  docker-compose.yml
configuration/: base.yaml  local.yaml
examples/: report.rs
mongo_init_script/: init-mongo.js
src/: configuration.rs  error.rs  lib.rs  main.rs  persistence.rs  routes.rs  startup.rs
src/persistence/: error.rs  power_switches.rs  reports.rs  rooms.rs  thermometers.rs  utils.rs
src/routes/: power_switches.rs  reports.rs  rooms.rs  thermometers.rs
tests/api/: helpers.rs  main.rs  power_switches.rs  rooms.rs  thermometers.rs
